# OptimalPV_RH

./: .gitignore  9_ToDos_NextSteps.py  EXCEL_timing_marks..xlsx  MASTER_data_aggregation.py  MASTER_postprocess_analysis.py  MASTER_pvalloc_MCalgorithm.py  MASTER_pvalloc_initialization.py  MASTER_visualization.py  OptimalPV_RH_directory_structure.txt  Predictions.py  README.md  Subset_OptPV_RH_data.gpkg  TRY_OUT.py  ToDos_NextSteps.py  __pyproject - Copy.toml  alloc_algorithm_SPARK.py  auxiliary_functions.py  calib_array_launch.cmd  calib_ary_6h_8c32GB.sh  calib_ary_bfs_launch_2139nbfs.cmd  calib_ary_bfs_launch_5nbfs.cmd  calib_ary_kt_launch.cmd  calib_arybfs_5nbfs.sh  calib_arybfs_6h8c32G.sh  calib_arybfs_TEST.sh  calib_arykt_6h8c32GB.sh  calib_conML_2h30c8GB.sh  calib_conML_2h40c16GB.sh  check_topo_df.csv  comparison_scicore_enoe.xlsx  data_agg_24h24c32G.sh  data_agg_24h24c64G.sh  data_agg_30m12c32G.sh  data_aggregation_MASTER.py  execution_RUNFILE.py  execution_scenarios.py  for_future_electricity_markets.py  functions.py  gwr_api.py  gwr_nan.csv  (+123 more)
.venv_optimalpv_rh/: pyvenv.cfg
archiv_no_longer_used/: Lupien_aggregation_roofkat_pv_munic.py  Lupien_aggregation_roofkat_pv_munic_V2.py  Lupien_code_subset_exploitablePV.py  Lupien_joined_roofkat_pv_munic.py  Predictions.py  for_future_electricity_markets.py  local_data_import_aggregation.py  pv_proposal_pvShare_to_bldng - Copy.txt  sanitycheck_joined_roofkat_pv_munic.py  spatial_data_toparquet_by_gm_log.txt  try_out_try_map_roof_pv_from_server_log.txt  visualization_MASTER_oldcopy.py
code/: MAIN_data_aggregation.py  MAIN_pvallocation.py
data_aggregation/: Lupien_aggregation_roofkat_pv_munic.py  Lupien_aggregation_roofkat_pv_munic_V2.py  MASTER_data_aggregation.py  aggregation_MASTER.py  api_electricity_prices.py  api_entsoe.py  api_pvtarif.py  default_settings.py  definition_aggregation.py  extend_data.py  function_data_import_aggregation.py  get_elecpri_data.py  installation_cost.py  joined_roofkat_pv_munic_Lupien.py  local_data_import_aggregation.py  preprepare_data.py  pv_municipality_Lupien.py  sanitycheck_joined_roofkat_pv_munic.py  spatial_data_toparquet_by_gm.py  split_data_geometry.py  sql_gwr.py
exploratory_files/: TRY_OUT.py  pulp_optimization_tryout.py  pv_houseclass_mapping.py  pyproject.toml
old_main_scen_runs/: main_past_short_pandasVSpolars_partitioned.py  main_past_short_pandasVSpolars_whole.py  main_past_short_pandas_whole.py  main_past_short_whole_vs_partitioned_tobosubdf.py
(+166 files in other folders)
