[tool.poetry]
name = "optimalpv-rh"
version = "0.1.0"
description = ""
authors = ["raulhochuliunibas <raul.hochuli@unibas.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" 
numpy = "^1.26.0"
pandas = "^2.1.1"
geopandas = "^0.14.0"
datetime = "^5.2"
shapely = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
